libmsooxml: libmsooxml: fine tuned text:line-break processing

Introducing a new <text:span> element having text-properties
defined by endParaRPr in selected situations in order to prevent
usage of the styleForModification function:

* Do not save text-properties into paragraph styles also in case
  of empty paragraphs.  Save an empty <text:span> having
  text-properties defined by endParaRPr.  Looking for the default
  font size defined by the application in case the endParaRPr
  formatted span is removed and new text is inserted.

* Insert an empty <text:span> having text-properties defined by
  endParaRPr in case the <text:line-break> is the last element of
  the paragraph in order to apply the correct fo:font-size to the
  new line.  Replaced the original fo:font-size from
  text-properties of <text:line-break> by TEXT_FONTSIZE_MIN to
  not affect the line-height calculation of both the new line and
  the current line.  This disables of course application of the
  default font-size defined by the application in case of
  <text:line-break>.

* Removing the fo:text-transform attribute is also removed from
  text-properties of text:line-break because it disables its
  functionality during layout (did not check the layout part).

* Also removing the style:text-underline-style attribute.  If
  text styles of the text chunk and text:line-break match,
  underline is applied until end of the line during layout.

BUG:288006